# gossip-protocol-rs

./: .gitignore  Cargo.toml  README.md  bin.rs  gossip_protocol_rs.ipynb  pyproject.toml
.github/workflows/: rust.yml
benches/: benchmarks.py  benchmarks.rs
src/: lib.rs  main.rs  node.rs  state_transition_function.rs
