[package]
name = "gossip-protocol-rs"
authors = ["Dinesh Pinto <annual.fallout_0z@icloud.com>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[lib]
name = "gossip_protocol_rs"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "gossip_protocol_rs"
path = "bin.rs"

[dependencies]
rand = "0.8.5"
pyo3 = { version = "0.19.2", features = ["abi3-py311"] }