[package]
name = "gossip-protocol-rs"
authors = ["Dinesh Pinto <annual.fallout_0z@icloud.com>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[lib]
name = "gossip_protocol_rs"
path = "src/lib.rs"

[[bin]]
name = "gossip_protocol_rs"
path = "src/bin/bin.rs"

[dependencies]
rand = "0.8.5"
pyo3 = { version = "0.19.2", features = ["extension-module"] }
counter = "0.5.7"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.profiling]
inherits = "release"
debug = true