[tool.poetry]
name = "gossip-protocol"
version = "0.1.0"
description = ""
authors = ["dineshpinto <annual.fallout_0z@icloud.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "gossip_protocol" }]

[tool.poetry.dependencies]
python = "^3.11"
maturin = "^1.2.3"
gossip-protocol-rs = {path = "target/wheels/gossip_protocol_rs-0.1.0-cp311-cp311-macosx_11_0_arm64.whl"}

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.5"
seaborn = "^0.12.2"


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
