[tool.poetry]
name = "gossip-protocol"
version = "0.1.0"
description = ""
authors = ["dineshpinto <annual.fallout_0z@icloud.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "gossip_protocol" }]

[tool.poetry.dependencies]
python = "^3.11"
maturin = "^1.2.3"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.5"
seaborn = "^0.12.2"


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
